--- a/InclassW10/InclassW10/MainWindow.xaml
+++ b/InclassW10/InclassW10/MainWindow.xaml
@@ -15,7 +15,17 @@
             </Canvas>
             <Canvas x:Name="previewCanvas" Background="Transparent">
             </Canvas>
-            <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown" MouseLeftButtonUp="Canvas_MouseLeftButtonUp" MouseMove="Canvas_MouseMove" Background="Transparent">
+            <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown" MouseLeftButtonUp="Canvas_MouseLeftButtonUp" MouseMove="Canvas_MouseMove" MouseRightButtonDown="Canvas_MouseRightButtonDown" Background="Transparent">
+                <Canvas.Resources>
+                    <ContextMenu x:Key="RightClickMenu">
+                        <MenuItem x:Name="DeleteMenuItem" Header="Delete" Click="DeleteMenuItem_Click"/>
+                    </ContextMenu>
+                </Canvas.Resources>
+                <Canvas.Style>
+                    <Style TargetType="{x:Type Canvas}" >
+                        <Setter Property="ContextMenu" Value="{StaticResource RightClickMenu}" />
+                    </Style>
+                </Canvas.Style>
             </Canvas>
         </Grid>
     </DockPanel>
