--- a/InclassW10/InclassW10/MainWindow.xaml
+++ b/InclassW10/InclassW10/MainWindow.xaml
@@ -11,23 +11,46 @@
             <Button x:Name="NoneButton" Content="None" Click="NoneButton_Click" Width="50" Height="30"/>
         </StackPanel>
         <Grid>
-            <Canvas x:Name="myCanvas">
-            </Canvas>
             <Canvas x:Name="previewCanvas" Background="Transparent">
+                <Canvas.RenderTransform>
+                    <MatrixTransform />
+                </Canvas.RenderTransform>
             </Canvas>
-            <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown" MouseLeftButtonUp="Canvas_MouseLeftButtonUp" MouseMove="Canvas_MouseMove" MouseRightButtonDown="Canvas_MouseRightButtonDown" Background="Transparent">
-                <Canvas.Resources>
+            <ItemsControl x:Name="DiagramDesignerCanvasContainer" 
+                          MouseWheel="DiagramDesignerCanvasContainer_MouseWheel" 
+                          MouseLeftButtonDown="Canvas_MouseLeftButtonDown" 
+                          MouseLeftButtonUp="Canvas_MouseLeftButtonUp" 
+                          MouseMove="Canvas_MouseMove" 
+                          MouseRightButtonDown="Canvas_MouseRightButtonDown">
+                <ItemsControl.Resources>
                     <ContextMenu x:Key="RightClickMenu">
                         <MenuItem x:Name="DeleteMenuItem" Header="Delete" Click="DeleteMenuItem_Click"/>
                         <!--<MenuItem x:Name="RotateMenuItem" Header="Rotate" Click="RotateMenuItem_Click"/>-->
                     </ContextMenu>
-                </Canvas.Resources>
-                <Canvas.Style>
-                    <Style TargetType="{x:Type Canvas}" >
+                </ItemsControl.Resources>
+                <ItemsControl.Style>
+                    <Style TargetType="{x:Type ItemsControl}" >
                         <Setter Property="ContextMenu" Value="{StaticResource RightClickMenu}" />
                     </Style>
-                </Canvas.Style>
-            </Canvas>
+                </ItemsControl.Style>
+                <ItemsControl.RenderTransform>
+                    <MatrixTransform />
+                </ItemsControl.RenderTransform>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas x:Name="diagramDesigner">
+                            <Canvas.Background>
+                                <SolidColorBrush Color="Transparent"/>
+                            </Canvas.Background>
+                        </Canvas>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <Canvas x:Name="myCanvas" Background="White">
+                    <Canvas.RenderTransform>
+                        <MatrixTransform />
+                    </Canvas.RenderTransform>
+                </Canvas>
+            </ItemsControl>
         </Grid>
     </DockPanel>
 </Window>
