--- a/InclassW10/InclassW10/MainWindow.xaml
+++ b/InclassW10/InclassW10/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InclassW10"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="MainWindow" Height="716" Width="800" Loaded="Window_Loaded">
     <DockPanel LastChildFill="True" Name="dockPanelScreen">
 
         <StackPanel x:Name="Shape" Height="159" DockPanel.Dock="Top" Orientation="Horizontal">
@@ -43,7 +43,7 @@
                     </RibbonGroup>
                     <RibbonGroup Header="Media">
                         <StackPanel>
-                            <Button Height="25" Width="25">
+                            <Button Height="25" Click="ImageImport" Width="25">
                                 <Image Source="assets/import.png"/>
                             </Button>
                             <Label Content="Import" FontSize="9"/>
