save, load, import

--- a/InclassW10/InclassW10/MainWindow.xaml
+++ b/InclassW10/InclassW10/MainWindow.xaml
@@ -43,7 +43,7 @@
                     </RibbonGroup>
                     <RibbonGroup Header="Media">
                         <StackPanel>
-                            <Button Height="25" Click="ImageImport" Width="25">
+                            <Button Height="25" Click="ImageImport_Click" Width="25">
                                 <Image Source="assets/import.png"/>
                             </Button>
                             <Label Content="Import" FontSize="9"/>
