--- a/InclassW10/InclassW10/MainWindow.xaml
+++ b/InclassW10/InclassW10/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InclassW10"
         mc:Ignorable="d"
-        Title="MainWindow" Height="716" Width="800" Loaded="Window_Loaded">
+        Title="Microsurf Peint" Height="716" Width="800" Loaded="Window_Loaded">
     <Window.Resources>
         <local:ZoomBehavior x:Key="ZoomBehavior"/>
     </Window.Resources>
